--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name" translatable="false">OBD-II Reader</string>
     <string name="action_settings">Settings</string>
     <string name="action_clear_codes">Clear Codes</string>
@@ -71,7 +71,7 @@
     <string name="pref_bluetooth_summaryOn">Turn off Bluetooth</string>
     <string name="pref_bluetooth_list_devices_summary">List of paired bluetooth devices.</string>
     <string name="pref_bluetooth_list_devices_title">Bluetooth Devices</string>
-    <string name="pref_gps_category_title">Enable GPS</string>
+    <string name="pref_gps_category_title">Enable/Disable GPS</string>
     <string name="pref_gps_category_summaryOff">Turn on GPS</string>
     <string name="pref_gps_category_summaryOn">Turn off GPS</string>
     <string name="pref_gps_update_period_title">Update Period in Seconds</string>
@@ -106,4 +106,5 @@
     <string name="pref_dev_email_title">Developer Email</string>
     <string name="pref_dev_email_summary">Logs will be emailed to this address</string>
     <string name="text_noerrors">There were no errors found.!</string>
+    <string name="pref_default_upload_url" tools:ignore="MissingTranslation">http://354ab10e.ngrok.io/obd_test</string>
 </resources>
