--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name" translatable="false">MyShopManager OBD-II Reader</string>
     <string name="action_settings">Settings</string>
     <string name="action_clear_codes">Clear Codes</string>
@@ -106,5 +106,25 @@
     <string name="pref_dev_email_title">Developer Email</string>
     <string name="pref_dev_email_summary">Logs will be emailed to this address</string>
     <string name="text_noerrors">There were no errors found.!</string>
-    <string name="pref_default_upload_url" tools:ignore="MissingTranslation">http://963a1fab.ngrok.io/obd_test</string>
+    <string name="pref_default_upload_url">http://963a1fab.ngrok.io/obd_test</string>
+
+    <string name="dtc">DTC</string>
+    <string name="menu_start">Start</string>
+    <string name="menu_stop">Stop</string>
+    <string name="menu_trips_list">Trip List</string>
+    <string name="pref_vehicle_info_title">Vehicle Info</string>
+
+    <!--main config settings-->
+    <!--<string name="upload_data_preference">true</string>-->
+    <!--<string name="upload_url_preference">https://myshopmanager.com/webhooks/obd/upload</string>-->
+    <!--<string name="vehicle_id_preference"> </string>-->
+    <!--<string name="enable_bluetooth_preference">true</string>-->
+    <!--<string name="gps_update_period_preference">1</string>-->
+    <!--<string name="gps_distance_period_preference">5</string>-->
+    <!--<string name="imperial_units_preference">true</string>-->
+    <!--<string name="obd_update_period_preference">4</string>-->
+    <!--<string name="reader_config_preference">atsp0\natz</string>-->
+    <!--<string name="dev_email">support@myshopmanager.com</string>-->
+    <!--<string name="dirname_full_logging">MSM_OBD_Reader</string>-->
+
 </resources>
