--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -99,7 +99,7 @@
     <string name="title_pref_full_logging"> Full logging configuration </string>
     <string name="pref_enable_full_logging_summary"> Enables full offline logging with upload</string>
     <string name="pref_enable_full_logging_title"> Enable full logging </string>
-    <string name="default_dirname_full_logging">OBDReaderLogs</string>
+    <string name="default_dirname_full_logging">MSM_OBD_Logging</string>
     <string name="pref_dirname_dialogTitle">Choose the name of the directory to save the logs</string>
     <string name="pref_dirname_title">Directory name</string>
     <string name="pref_dirname_summary">Name of the directory where to save the files</string>
